# MultiPlatformDemo

./: .gitignore  .gitmodules  .qmlformat.ini  CMakeLists.txt  Main.qml  main.cpp
src/: main.cpp
src/Connectivity/: ble_connection.cpp  ble_connection.h  ble_controller.cpp  ble_controller.h  ble_device_controller.cpp  ble_device_controller.h  ble_device_model.cpp  ble_device_model.h  ble_discovery_controller.cpp  ble_discovery_controller.h  ble_scanner.cpp  ble_scanner.h
src/Core/: alert_controller.cpp  alert_controller.h  configuration.h  dashboard_protocol.cpp  dashboard_protocol.h
src/UI/: DeviceDetailView.qml  DeviceListView.qml  Main.qml
